--- a/Courses/CyptProto/s11.html
+++ b/Courses/CyptProto/s11.html
@@ -27,7 +27,7 @@
       <td style="text-align: left; vertical-align: top;"><br>
 	  <a href="http://www.cs.tau.ac.il/">
 	  <img
- src="f10_files/tau-cs.gif" height="120" width="800"></a><br><br>
+ src="tau-cs.gif" height="128" width="752"></a><br><br>
 	  <h1>0368-4171<b>, Spring 2011: </b>
 	  <h1><b>Cryptographic Protocols</b></h1>
 	  <p>
@@ -103,15 +103,9 @@ the makeup of the class, but roughly we will go as follows:</big></span></font><
 	  <p><b><b><b><a href="#Problem_Sets"><b>Problem Sets</b></a></b></b></b></p>
 	  <p><b><b><b><b><a href="#Readings"><b>Readings</b></a></b></b></b></b><b><b><b><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <br></b></b></b></b></p>
-	  <p><b><b><b><b><br>
-	  <font-size="10"></font-size="10">
-	  </b></b></b></b></p>
-	  <p><b><b><b><b><a name="announce"></a></b></b></b></b></p>
-	  <p><br><b><b><b><b></b></b></b></b></p>
 	  <div class="header">
 		  <big><b><b><b><b>Announcements</b></b></b></b></big></div>
 	  <b><b><b><b><br></b></b></b></b>
-	  <p><b><b><b><b><a name="Prerequisite"></a></b></b></b></b></p>
 	  <br>
 	  <div class="header">
 		  <big><b><b><b>Prerequisite</b></b></b></big></div>
@@ -132,9 +126,7 @@ the makeup of the class, but roughly we will go as follows:</big></span></font><
 	  <a
  href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/FOC/f10-materials/ps-guidelines.pdf">guidelines for solutions.</a>
 	  </b></b></b>
-      <ul>
-      </ul>
-      <b><b><b><a name="Readings"></a></b></b></b><b><b><b><br><br></b></b></b>
+      <b><br></b>
 	  <div class="header">
 		  <big><b><b><b>Readings</b></b></b></big></div>
 	  <p>You may find the following to be useful references (but beware
