--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@ long as the verifier is also given a good approximation of the value
 		  [<a href="papers/ArgumentPR/ArgumentPR_CR.pdf">PDF</a>]<span style="font-weight: 400;">
 		  [<a href="papers/ArgumentPR/Seminar.pptx">S<span class="style11">lides</span></a>]
 		  </span><br><span style="font-weight: 400;">Draft of full version
-				<a href="papers/KDI/KDI-full.pdf">[PDF]</a><a href="papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b>
+				<a href="papers/ArgumentPR/ArgumentPR.pdf">[PDF]</a><a href="papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b>
 		  </span></span></h2>
 		  
 		   <div class="box" id="abstract-ParallelRepetition" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
