--- a/Courses/CyptProto/s11.html
+++ b/Courses/CyptProto/s11.html
@@ -27,7 +27,7 @@
       <td style="text-align: left; vertical-align: top;"><br>
 	  <a href="http://www.cs.tau.ac.il/">
 	  <img
- src="tau-cs.gif" height="128" width="752"></a><br><br>
+ src="../tau-cs.gif" height="128" width="752"></a><br><br>
 	  <h1>0368-4171<b>, Spring 2011: </b>
 	  <h1><b>Cryptographic Protocols</b></h1>
 	  <p>
