--- a/Courses/FOC/f10.html
+++ b/Courses/FOC/f10.html
@@ -93,8 +93,8 @@ Bilinear forms, lattice-based crypto</span></font></li>
 	  <p><br><b><b><b><b></b></b></b></b></p>
 	  <div class="header">
 		  <big><b><b><b><b>Announcements</b></b></b></b></big></div>
-	  <b><b><b><b><br></b></b></b></b>
-	  <p><b><b><b><b><a name="Prerequisite"></a></b></b></b></b></p>
+	  <b><b><b><b><br>Notes on Symmetric Encryption, taken this semster
+	  <a href="scribe9updated.pdf">PDF</a></b></b></b></b><p><b><a name="Prerequisite"></a></b></p>
 	  <br>
 	  <div class="header">
 		  <big><b><b><b>Prerequisite</b></b></b></big></div>
