--- a/index.html
+++ b/index.html
@@ -142,13 +142,6 @@ DIV.Section1 {
 
 
 
-.auto-style3 {
-	font-size: small;
-	color: #0000FF;
-}
-
-
-
 </style>
 
 
@@ -391,9 +384,8 @@ DIV.Section1 {
  <span class="auto-style1" > <a
       href="Courses/FOC/f10.html"   <font
       size=2> Foundation of Cryptography</font></a></span><span class="style16" ><span class="auto-style1" >, 
-		<a
-      href="Courses/Pseudorandomness/seminar.html"   <font
-      size=2> Seminar on Pseudorandomness</a></span>     </tr>
+		<a <font="" href="Courses/CyptProto/s11.html" size="2">Cryptographic 
+		Protocols</a></span>     </tr>
  </table>
 
 
@@ -435,9 +427,6 @@ in Reverse Chronological Order</font></h1>
 }
 .auto-style2 {
 	color: #0000FF;
-}
-.auto-style3 {
-	color: #000000;
 }
 .auto-style4 {
 	color: #0F0F4B;
