--- a/index.html
+++ b/index.html
@@ -381,11 +381,10 @@ DIV.Section1 {
 
     <tr>  <td align="left">
  <span class="style16" ><br><b>Teaching</b><br> </span>
- <span class="auto-style1" > <a
-      href="Courses/FOC/f10.html"   <font
-      size=2> Foundation of Cryptography</font></a></span><span class="style16" ><span class="auto-style1" >, 
-		<a <font="" href="Courses/CyptProto/s11.html" size="2">Cryptographic 
-		Protocols</a></span>     </tr>
+ <span class="auto-style1" > 
+ 
+ <a href="Courses/FOC/f10.html"   <font size=2> Foundation of Cryptography</font></a>,
+ 	   <a href="Courses/CyptProto/s11.html"  <font size=2> Cryptographic Protocols </font></a></span></tr>
  </table>
 
 
