--- a/Courses/CyptProto/s11.html
+++ b/Courses/CyptProto/s11.html
@@ -73,7 +73,7 @@ Schreiber 20 (in charge of the administrative issues of this semester, i.e.,
 	  <p><font face="Times New Roman" size="3"><span lang="HE"><big>
 		  <a name="Agenda">
 		  <big><b>A</b></big></a></span><big><a name="Agenda">g<b>enda</b></a><b>: </b></big><span lang="HE">
-	  <br>The
+	  <br>This
 exact syllabus will be determined as the semester proceeds, based on
 the makeup of the class, but roughly we will go as follows:</span></big></font></p>
 	  <iframe src="https://www.google.com/calendar/embed?mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=oped6fm4gldbgh4ev5c9lmecns%40group.calendar.google.com&amp;color=%23182C57&amp;ctz=Asia%2FJerusalem" style=" border-width:0 " width="800" height="600" frameborder="0" scrolling="no"></iframe>
