--- a/index.html
+++ b/index.html
@@ -194,19 +194,7 @@ DIV.Section1 {
 </script>
 
 
-<script type="text/javascript">
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-4194129-2']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
 
 </head><body>
 <div style="text-align: center;">
@@ -491,7 +479,8 @@ provided the number of signing queries is a-priori bounded</span><span class="au
 		  </span><br>
 					<span class="style14"><strong>Black-Box Constructions of 
 					Protocols for Secure Computation&nbsp;</strong><span style="font-weight: 400;"><span dir="LTR" style="font-weight: 400"><b><img height="12" src="updated.gif" width="60"></b></span></span><br>
-					Manuscript 2010</span> <span style="font-weight: 400;"><br>[<a href="javascript:toggle('abstract-BBMPX')">Abstract</a>]<span class="style14"><span dir="LTR" class="style14"><a href="papers/BlackBoxMPC/black-box-mpc.pdf">[PDF]</a><a href="papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b> </span></span></span></h2>
+		  <span style="font-weight: 400;"><span dir="LTR">S</span><span dir="LTR" class="style14"><span dir="LTR">IAM 
+		  Journal of Computing 2011</span></span></span></span> <span style="font-weight: 400;"><br>[<a href="javascript:toggle('abstract-BBMPX')">Abstract</a>]<span class="style14"><span dir="LTR" class="style14"><a href="papers/BlackBoxMPC/black-box-mpc.pdf">[PDF]</a><a href="papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b> </span></span></span></h2>
 					</li>
 					
 			<div class="box" id="abstract-BBMPX" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
@@ -1356,20 +1345,18 @@ window.open = SymWinOpen;
 
  </p></div>
 
- <!-- Start of StatCounter Code -->
-<script type="text/javascript">
-var sc_project=4336728;
-var sc_invisible=1;
-var sc_partition=54;
-var sc_click_stat=1;
-var sc_security="02e3f808";
+ <script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-4194129-2']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
 </script>
 
-<script type="text/javascript" src="index_files/counter.js"></script><noscript><div
-class="statcounter"><a title="counter customisable"
-href="http://www.statcounter.com/" target="_blank"><img
-class="statcounter"
-src="http://c.statcounter.com/4336728/0/02e3f808/1/" alt="counter
-customisable" ></a></div></noscript>
-<!-- End of StatCounter Code -->
 </body></html>
