--- a/index.html
+++ b/index.html
@@ -1121,7 +1121,8 @@ that the receiver does not learn any additional information on
 				Cryptology - CRYPTO, 2006.<br>[<a href="javascript:toggle('abstract-RI')">Abstract</a>]
 				<a href="papers/RandomizedIteate/Randomized_Iterate_CryptoCR.pdf">[PDF]</a>
 		  <span style="color: blue;">[</span><a href="papers/RandomizedIteate/Randomized_Iterate.pps">Slides</a><span style="color: blue;">]<br></span><b><span class="style5">Winner of best paper
-				award CRYPTO 2006</span><span style="color: blue;"><br></span></b><span class="style5">Draft of full version</span><span style="color: blue;"><span style="color: blue;"> <a href="papers/RandomizedIteate/Random_iterate_Ver1.pdf">[PDF]</a><b>
+				award CRYPTO 2006</span><span style="color: blue;"><br></span></b><span class="style5">Draft of full version</span><span style="color: blue;"><span style="color: blue;"> 
+		  <a href="papers/RandomizedIteate/Main_Random_iterate_Ver4.pdf">[PDF]</a><b>
 		  </b></span></span></span></h2>
 		  <div class="box" id="abstract-RI" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
 			  <h2><span style="font-weight: 400;">We consider two of the
