--- a/index.html
+++ b/index.html
@@ -391,6 +391,40 @@ in Reverse Chronological Order</font></h1>
 
       <ul>
 
+<li>
+					<p><span style="font-weight: 400;">
+					<span dir="LTR" class="style14">
+		  		    <span dir="LTR" style="font-weight: 400;">
+					Iftach Haitner </span>
+		  		  and <a href="http://u.cs.biu.ac.il/~omrier/">Eran O<span class="style11">mri</span></a>&nbsp; </span>
+		  </span><br>
+					<strong>Coin Flipping with Constant Bias Implies One-Way 
+					Functions</strong><span class="style14"><strong><span class="style11">&nbsp;</span><span style="font-weight: 400;">[<a href="javascript:toggle('abstract-CoinFlipping')">Abstract</a><span class="style11">]</span><span dir="LTR" class="style14">&nbsp;</span></span></strong><img height="11" src="new.gif" width="28"><br>
+					To appear in FOCS 2011 </span></p>
+					</li>
+					
+			<div class="box" id="abstract-CoinFlipping" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
+					  <h2><span style="font-weight: 400;"> It is well known (c.f., Impagliazzo and Luby [FOCS &#39;89]) that the existence of 
+almost all ``interesting&quot; cryptographic applications, i,e., ones that cannot 
+hold information theoretically, implies<br />
+one-way functions. An important exception where the above implication is not 
+known, however, is the case of coin-flipping protocols. Such protocols allow 
+honest parties to mutually flip an unbiased<br />
+coin, while guaranteeing that even a cheating (efficient) party cannot bias the 
+output of the protocol by much. While Impagliazzo and Luby proved that 
+coin-flipping protocols that are safe<br />
+against negligible bias do imply one-way functions, and, very recently, Maji, 
+Prabhakaran, and Sahai [FOCS &#39;10] proved the same for constant-round protocols 
+(with any non-trivial bias). For the general<br />
+case, however, no such implication was known.<br />
+<br />
+We make progress towards answering the above fundamental question, showing that 
+(strong) coin-flipping protocols safe against a constant bias (concretely, 
+\frac{\sqrt2 -1}2 - o(1)) imply one-way<br />
+functions.</p>
+			
+  </span></h2>
+					</div>
 
 
 
@@ -403,7 +437,7 @@ in Reverse Chronological Order</font></h1>
 		  </span><br>
 					<span class="style14"><strong>On the (In)Security of
 					<span class="il">RSA</span>&nbsp; Signatures<span class="style11">&nbsp;</span><span style="font-weight: 400;">[<a href="javascript:toggle('abstract-FDH')">Abstract</a><span class="style11">]</span><span dir="LTR" class="style14">
-					<span class="style11">[</span><a href="papers/FullDomainHash/seminar.pptx">S<span class="style11">lides</span></a>]&nbsp;</span></span></strong><img height="11" src="new.gif" width="28"><br>
+					<span class="style11">[</span><a href="papers/FullDomainHash/seminar.pptx">S<span class="style11">lides</span></a>]&nbsp;</span></span></strong><br>
 					Manuscript 2011 <span dir="LTR" class="style14"><strong><span style="font-weight: 400;">[<a href="papers/FullDomainHash/FDH.pdf">PDF</a><span class="style11">]</span></span></strong></span></span></p>
 					</li>
 					
