--- a/index.html
+++ b/index.html
@@ -400,7 +400,11 @@ in Reverse Chronological Order</font></h1>
 		  </span><br>
 					<strong>Coin Flipping with Constant Bias Implies One-Way 
 					Functions</strong><span class="style14"><strong><span class="style11">&nbsp;</span><span style="font-weight: 400;">[<a href="javascript:toggle('abstract-CoinFlipping')">Abstract</a><span class="style11">]</span><span dir="LTR" class="style14">&nbsp;</span></span></strong><img height="11" src="new.gif" width="28"><br>
-					To appear in FOCS 2011 </span></p>
+					To appear in FOCS 2011 <span style="font-weight: 400;">
+					<span dir="LTR" class="style14">
+					<a href="papers/CoinFlipping/CoinFlippingtoOWF_FOCS.pdf">
+					[PDF]</a><a href="papers/FindingCollisions/FindingCollisions.ps"></a></span></span><br><span style="font-weight: 400;"><span dir="LTR" class="style14">Draft of full version
+					<a href="papers/CoinFlipping/CoinFlippingtoOWF.pdf">[PDF]</a></span></span></span></p>
 					</li>
 					
 			<div class="box" id="abstract-CoinFlipping" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
