--- a/index.html
+++ b/index.html
@@ -410,22 +410,17 @@ in Reverse Chronological Order</font></h1>
 			<div class="box" id="abstract-CoinFlipping" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
 					  <h2><span style="font-weight: 400;"> It is well known (c.f., Impagliazzo and Luby [FOCS &#39;89]) that the existence of 
 almost all ``interesting&quot; cryptographic applications, i,e., ones that cannot 
-hold information theoretically, implies<br />
-one-way functions. An important exception where the above implication is not 
+hold information theoretically, implies one-way functions. An important exception where the above implication is not 
 known, however, is the case of coin-flipping protocols. Such protocols allow 
-honest parties to mutually flip an unbiased<br />
-coin, while guaranteeing that even a cheating (efficient) party cannot bias the 
+honest parties to mutually flip an unbiased coin, while guaranteeing that even a cheating (efficient) party cannot bias the 
 output of the protocol by much. While Impagliazzo and Luby proved that 
-coin-flipping protocols that are safe<br />
-against negligible bias do imply one-way functions, and, very recently, Maji, 
+coin-flipping protocols that are safe against negligible bias do imply one-way functions, and, very recently, Maji, 
 Prabhakaran, and Sahai [FOCS &#39;10] proved the same for constant-round protocols 
-(with any non-trivial bias). For the general<br />
-case, however, no such implication was known.<br />
+(with any non-trivial bias). For the general case, however, no such implication was known.
 <br />
 We make progress towards answering the above fundamental question, showing that 
 (strong) coin-flipping protocols safe against a constant bias (concretely, 
-\frac{\sqrt2 -1}2 - o(1)) imply one-way<br />
-functions.</p>
+\frac{\sqrt2 -1}2 - o(1)) imply one-way functions.</p>
 			
   </span></h2>
 					</div>
